[package]
name = "rust-judger"
version = "0.1.0"
authors = ["hzcool <7866454+hzcool123@user.noreply.gitee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-service = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.5.0", features = ["full"] }
dotenv = "0.15"
tempfile = "3.2"
rand = "0.6.5"
lazy_static = "1.4.0"
